--- a/Madlib-Project/src/style/main.scss
+++ b/Madlib-Project/src/style/main.scss
@@ -1,10 +1,101 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .home {
+    position: relative;
+    
     background-color: rgba(207, 207, 207, 0.06);
+    display: grid;
+    
+    justify-items: center;
+    //align-items: center;
+    grid-template-rows: [header-s] 218px [header-e card-s] minmax(746px, 994px) [card-e]
+}
+
+.header {
+    align-self: center;
+    color: white;
+    font-family: 'Montserrat';
+    text-align: center;
+
+    &__skew {
+        z-index: -10;
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        background-color: #444;
+    }
+    
+    &__border {
+        z-index: -10;
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 49%, 100% 24%, 100% 25%, 0 50%);
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        background-color: #00cb79;
+    }
+    
+    h1 {
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+    }
+    
+    p {
+        color: rgba(255, 255, 255, .75);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
+    }
 }
 
 .card {
-    height: 736px;
+    min-height: 736px;
+    max-height: 994px;
     width: 1240px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 1);
     border-radius: 7px;
+    
+    display: grid;
+    grid-template-rows: 1fr 50px;
+
+    &__inputs {
+        background-color: skyblue;
+        display: grid;
+        grid-template-rows: repeat(4, 1fr); 
+        grid-template-columns: repeat(4, 1fr); 
+        
+        justify-items: center;
+        align-items: center;
+    }
 }
+
+.input {
+    display: grid;
+    //grid-template-columns: 26px 1fr;
+    grid-template-columns: [number-s] 26px [number-e input-s] 1fr [title-e];
+    
+    &__title {
+        grid-column: input-s/input-e;
+    }
+    
+    input {
+        grid-column: input-s/input-e;
+    }
+    
+    &__number {
+        grid-column: number-s/number-e;
+    }
+    
+}
+
