--- a/Madlib-Project/src/style/main.scss
+++ b/Madlib-Project/src/style/main.scss
@@ -63,14 +63,14 @@ body {
     min-height: 736px;
     max-height: 994px;
     width: 1240px;
-    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 1);
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, .1);
     border-radius: 7px;
     
     display: grid;
     grid-template-rows: 1fr 50px;
+    background-color: white;
 
     &__inputs {
-        background-color: skyblue;
         display: grid;
         grid-template-rows: repeat(4, 1fr); 
         grid-template-columns: repeat(4, 1fr); 
@@ -82,19 +82,38 @@ body {
 
 .input {
     display: grid;
+    font-family: 'Montserrat';
+    text-align: center;
+
     //grid-template-columns: 26px 1fr;
     grid-template-columns: [number-s] 26px [number-e input-s] 1fr [title-e];
     
     &__title {
         grid-column: input-s/input-e;
+        border-top: 1px solid #b3b3b3;
+        color: #b3b3b3;
+        font-size: 12px;
+        font-weight: 300px;
     }
     
     input {
         grid-column: input-s/input-e;
+        
+        border: none;
+        font-size: 15px;
+        text-align: center;
+        font-weight: 600;
     }
     
     &__number {
         grid-column: number-s/number-e;
+        background-color: #00cb79;
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        line-height: 24px;
+        padding-top: 1px;
+        border-radius: 50%;
     }
     
 }
