--- a/Schedule-project/src/style/library.scss
+++ b/Schedule-project/src/style/library.scss
@@ -3,30 +3,89 @@
     grid-template-columns: [title-s] 100px [title-e courses-s] repeat(auto-fit, 1fr) [courses-e];
     
     grid-row-gap: 22px;
+    
+    &__title {
+        color: $color-blue;
+        font-family: $font-ale;
+        font-size: 34px;
+        font-weight: bold;
+        border-left: 2px solid $color-blue;
+        padding: 20px 40px;
+    }
+}
+
+@mixin solid-course {
+    background: white;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
 }
 
 .library-course {
+    padding: 25px;
+    
     display: grid;
     grid-template-columns: repeat(auto-fit, 1fr);
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 80px 1fr;
     //grid-template-rows: repeat(auto-fit, 1fr);
     
-    background: cornflowerblue;
+    //background: white;
+    
+    &:hover {
+        @include solid-course();
+    }
 
     &__title-check {
         grid-row: 1/2;
+        grid-column: 1/2;
         display: flex;
+    }
+    
+    &__title {
+        color: $color-gray;
+        font-family: 'Lato';
+        font-size: 18px;
+        line-height: 22px;
+    }
+    
+    &__line {
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        border-bottom: 1px solid #F2F2F2;
+        margin-top: 19px;
+        margin-bottom: 24px;
     }
     
     &__arrow {
         grid-row: 1/2;
+        grid-column: 2/3;
     }
     
     &__action {
         grid-row: 1/2;
+        grid-column: 3/4;
     }
     
     &__description {
         grid-row: 2/3;
+        grid-column: 1/-1;
+        label {
+            color: $color-blue;
+            font-family: $font-ale;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+        }
+        p {
+            color: $color-gray;
+            font-family: 'Lato';
+            font-size: 16px;
+        }
     }
+    
+    &__icon {
+        color: $color-blue;
+    }
+}
+
+.library-course-selected {
+    @include solid-course();
 }
