finalized styles and fixed icon bugs

--- a/Schedule-project/src/style/main.scss
+++ b/Schedule-project/src/style/main.scss
@@ -7,9 +7,10 @@
     width: 100vw;
     
     display: grid;
-    grid-template-columns: [library-s] 1fr 1fr [library-e schedule-s] 1fr [schedule-e];
+    grid-template-columns: [library-s] 1fr 1fr [schedule-s] 50px [ library-e] 1fr [schedule-e];
     grid-template-rows: 1fr;
     
+    overflow: hidden;
 }
 
 .library {
@@ -21,6 +22,7 @@
 
 .schedule {
     grid-column: schedule-s/schedule-e;
+    grid-row: 1/-1;
     position: relative;
     height: 100%;
     width: 100%;
