--- a/Schedule-project/src/style/schedule.scss
+++ b/Schedule-project/src/style/schedule.scss
@@ -1,26 +1,89 @@
 .schedule {
     display: grid;
-    grid-template-rows: 100px repeat(auto-fill, 75px) [progress-s] 75px [progress-e];
+    grid-template-rows: [space-one-s] 1fr [space-one-e] 100px repeat(5, 80px) [progress-s] 1fr [progress-e];
     grid-row-gap: 22px;
+    
+    padding-top: 237px;
+    
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    
+    &__title {
+        position: absolute;
+        top: 154px;
+        border-left: 2px solid $color-subtle-gray;
+        padding-left: 30px;
+        padding-top: 6px;
+        padding-top: 6px;
+        color: white;
+        font-family: $font-ale;
+        font-size: 20px;
+        text-align: center;
+    }
 }
 
 .schedule-course {
+    height: 55px;
+    width: 280px;
+    background: white;
+    box-shadow: 0 2px 14px 0 rgba(0,0,0,.2);
+    
+    color: $color-subtle-black;
+    font-family: $font-lato;
+    font-size: 16px;
+    text-align: center;
+    
+    display: grid;
+    grid-template-columns: [title-s] 1fr [action-s] 32px [action-e] 12px [title-e];
+    grid-template-rows: 1fr;
+    
+    justify-items: center;
+    align-items: center;
+
+    &__title {
+        grid-column: title-s/title-e;
+        grid-row: 1/2;
+    }
+    
+    &__action {
+        grid-column: action-s/action-e;
+        grid-row: 1/2;
+    }
     
 }
 
 .progress-tracker {
     grid-row: progress-s/progress-e;
+    width: 100%;
+    height: 76px;
+    
+    align-self: end;
+    align-items: center;
+    justify-items: center;
+    
     
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 75px;
+    grid-template-columns: 33px [title-s] 1fr [title-e percent-s] 75px [percent-e];
     background-color: rgba(255, 255, 255, 0.3);
+    font-family: $font-ale;
+    font-size: 16px;
+    color: white;
     
     &__title {
-        grid-column: 1/2;
+        grid-column: title-s/title-e;
+        grid-row: 1/2;
+        
+        border-left: 2px solid $color-subtle-gray;
+        padding-left: 30px;
+        padding-top: 6px;
+        padding-top: 6px;
     }
     
     &__percentage {
-        grid-column: 2/3;
+        grid-column: percent-s/percent-e;
+        grid-row: 1/2;
+        justify-self: center
     }
 }
