--- a/PropertyManagement-project/src/style/auth.scss
+++ b/PropertyManagement-project/src/style/auth.scss
@@ -12,10 +12,66 @@
     
 }
 
+.sign-in-form {
+    display: grid;
+    justify-items: center;
+    
+    &__title {
+       width: 100%;
+    }
+    
+    &__email {
+        
+    }
+    
+    &__password {
+        
+    }
+}
+
 .form-title {
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 2rem;
     border-bottom: 1px solid $color-gray-E6;
     padding-bottom: 1.2rem;
+}
+
+.form-input {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 129px 500px;
+    
+    align-items: center;
+    width: 629px;
+    justify-content: center;
+    
+    &__title {
+        frid-row: 1/-1;
+        grid-column: 1/2;
+    }
+    
+    &__input {
+        frid-row: 1/-1;
+        grid-column: 2/3;
+    }
+}
+
+.form-input {
+    &__title {
+        color: $color-red;
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 2.3rem;
+    }
+    
+    &__input {
+        height: 4rem;
+        width: 50rem;
+        border: 1px solid $color-gray-E6;
+        border-radius: .5rem;
+        padding-left: 2rem;
+        font-size: 1.6rem;
+        font-weight: 500;
+    }
 }
