Added mongodb server, pre-made prop management database

--- a/PropertyManagement-project/src/style/variables.scss
+++ b/PropertyManagement-project/src/style/variables.scss
@@ -1,7 +1,7 @@
 $color-gray-4D: #4D4D4D;
-$color-red: rgb(215, 0, 0);
+$color-red-BA: rgb(215, 0, 0);
 $color-gray-D8: #D8D8D8;
 $color-gray-E6: #E6E6E6;
 
 $font-encode: 'Encode Sans';
-$font-encode-condensed: 'Encode Sans Condensed';
+$font-encode-cond: 'Encode Sans Condensed';
