--- a/PropertyManagement-project/src/style/form-fields.scss
+++ b/PropertyManagement-project/src/style/form-fields.scss
@@ -1,70 +1,32 @@
-.sign-up,
-.sign-in {
-    grid-row: content-s/content-e;
-    grid-column: content-s/content-e;
-}
 
-.sign-up {
-    
-}
-
-.sign-in {
-    
-}
-
-.sign-in-form {
-    display: grid;
-    justify-items: center;
-    
-    &__title {
-       width: 100%;
-    }
-    
-    &__email {
-        
-    }
-    
-    &__password {
-        
-    }
-}
-
-.form-title {
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 2rem;
-    border-bottom: 1px solid $color-gray-E6;
-    padding-bottom: 1.2rem;
-}
+// INPUT
 
 .form-input {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 129px 500px;
-    
+
     align-items: center;
     width: 629px;
     justify-content: center;
-    
+
     &__title {
-        frid-row: 1/-1;
+        grid-row: 1/-1;
         grid-column: 1/2;
     }
-    
     &__input {
-        frid-row: 1/-1;
+        grid-row: 1/-1;
         grid-column: 2/3;
     }
 }
 
 .form-input {
     &__title {
-        color: $color-red;
+        color: $color-red-BA;
         font-size: 1.8rem;
         font-weight: 500;
         line-height: 2.3rem;
     }
-    
     &__input {
         height: 4rem;
         width: 50rem;
@@ -73,5 +35,22 @@
         padding-left: 2rem;
         font-size: 1.6rem;
         font-weight: 500;
+    }
+}
+
+// BUTTON
+
+.form-button {
+    &__button {
+        height: 4rem;
+        width: 21.6rem;
+        border-radius: 2rem;
+        background-color: $color-red-BA;
+
+        color: white;
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 2.8rem;
+        text-align: center;
     }
 }
