--- a/PropertyManagement-project/src/style/header.scss
+++ b/PropertyManagement-project/src/style/header.scss
@@ -1,7 +1,7 @@
 .header {
-    grid-column: content-s/content-e;
     grid-row: header-s/header-e;
-    
+    grid-column: content-s/content-e;
+
     display: grid;
     grid-template-columns: [s] 1fr [e];
     grid-template-rows: [title-s] 3rem [title-e sub-s] 2rem [sub-e];
@@ -10,7 +10,6 @@
         grid-row: title-s/title-e;
         grid-column: s/e;
     }
-    
     &__subtitle {
         grid-row: sub-s/sub-e;
         grid-column: s/e;
@@ -22,12 +21,11 @@
     
     &__title {
         font-size: 2.4rem;
-        font-size: 500;
+        font-weight: 500;
         line-height: 3rem;
     }
-    
     &__subtitle {
-        color: $color-red;
+        color: $color-red-BA;
         font-size: 1.6rem;
         font-weight: 300;
         line-height: 2rem;
